add public api
